graphics/vtk/files/tmp
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaGLView.mm: In function '-[vtkCocoaGLView performDragOperation:]':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaGLView.mm:587:61: warning: 'NSURL' may not respond to '-fileSystemRepresentation'
  587 |     const char* filePath = [fileURL fileSystemRepresentation];
      |                                                             ^
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaGLView.mm:587:61: warning: (messages without a matching method signature will be assumed to return 'id' and accept '...' as arguments)
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaGLView.mm:587:28: error: cannot convert 'objc_object*' to 'const char*' in initialization
  587 |     const char* filePath = [fileURL fileSystemRepresentation];
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                            |
      |                            objc_object*
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaGLView.mm: In function '-[vtkCocoaGLView viewDidChangeBackingProperties]':
/opt/local/var/macports/build/vtk-1c39adea/work/vtk-9.6.1/Rendering/OpenGL2/vtkCocoaGLView.mm:662:40: warning: 'NSView' may not respond to '-viewDidChangeBackingProperties'
  662 |   [super viewDidChangeBackingProperties];
      |                                        ^
make[2]: *** [Rendering/OpenGL2/CMakeFiles/RenderingOpenGL2.dir/vtkCocoaGLView.mm.o] Error 1
make[2]: Leaving directory `/opt/local/var/macports/build/vtk-1c39adea/work/build'
make[1]: *** [Rendering/OpenGL2/CMakeFiles/RenderingOpenGL2.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
